Update core endpoints
